# music-catalog-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/music/: models.py  pagination.py  serializers.py  validators.py  views.py
backend/music/migrations/: 0001_initial.py
backend/music/tests/: test_models.py  test_serializers.py  test_views.py
